--- a/force-app/test/default/classes/SummitEventsCancelReview_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsCancelReview_TEST.cls
@@ -6,7 +6,7 @@
 @IsTest
 private class SummitEventsCancelReview_TEST {
     @IsTest static void testRegCancel() {
-        SummitEventsTestSharedDataFactory.createContact('TestFirst1', 'Test', 'TestLast1', 'test1@valleyhill.net', '55418', '(555) 555-5555', '1971-03-22', '2012');
+        SummitEventsTestSharedDataFactory.createContact('TestFirst1', 'TestLast1', 'test1@valleyhill.net', '55418', '(555) 555-5555', '1971-03-22');
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
         Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
         User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User', 'Summit_Events_Registrant');
@@ -45,7 +45,7 @@ private class SummitEventsCancelReview_TEST {
     }
 
     @IsTest static void testEncryptedRegistrationTamper() {
-        SummitEventsTestSharedDataFactory.createContact('TestFirst1', 'Test', 'TestLast1', 'test1@valleyhill.net', '55418', '(555) 555-5555', '1971-03-22', '2012');
+        SummitEventsTestSharedDataFactory.createContact('TestFirst1', 'TestLast1', 'test1@valleyhill.net', '55418', '(555) 555-5555', '1971-03-22');
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
         Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
         User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User', 'Summit_Events_Registrant');
@@ -77,7 +77,7 @@ private class SummitEventsCancelReview_TEST {
                     WHERE Id = :seaTestRegistration.Id
             ];
             System.assertEquals(statusRegistration.Status__c, 'Registered');
-            System.assertEquals(cancelReviewCtrl.eventNotFound, TRUE);
+            System.assertEquals(cancelReviewCtrl.eventNotFound, true);
             Test.stopTest();
         }
     }
